# cmd/server/wire_gen.go
@@ -41,32 +41,34 @@ func wireBootstrap(app lynx.Lynx) (*boot.Bootstrap, func(), error) {
 	database := clients.NewDatabase(dataClients)
 	apiKeyRepository := bunrepo.NewAPIKeyRepository(database)
 	consoleAdminRepository := bunrepo.NewConsoleAdminRepository(database)
-	documentDatabase := documentdb.NewPostgresDocumentDatabase(database)
-	validator := auth.NewValidator(appConfig, apiKeyRepository, consoleAdminRepository, documentDatabase)
-	repository := bunrepo.NewProjectRepository(database)
-	account := client.NewAccount(appConfig, repository, documentDatabase)
+	consoleAdminProjectRepository := bunrepo.NewConsoleAdminProjectRepository(database)
+	documentDB := documentdb.NewPostgresDocumentDatabase(database)
+	validator := auth.NewValidator(appConfig, apiKeyRepository, consoleAdminRepository, consoleAdminProjectRepository, documentDB)
+	repository := bunrepo.NewAuditRepository(database)
+	projectsRepository := bunrepo.NewProjectRepository(database)
+	account := client.NewAccount(appConfig, projectsRepository, documentDB)
 	accountService := clientgrpc.NewAccountService(account)
 	healthService := servergrpc.NewHealthService()
-	projects := server.NewProjects(repository, documentDatabase)
+	projects := server.NewProjects(projectsRepository, documentDB)
 	projectsService := servergrpc.NewProjectsService(projects)
 	objectStore, err := storage.NewMinioObjectStore(appConfig)
 	if err != nil {
 		cleanup()
 		return nil, nil, err
 	}
-	storageStorage := storage2.NewStorage(appConfig, repository, documentDatabase, objectStore)
+	storageStorage := storage2.NewStorage(appConfig, projectsRepository, documentDB, objectStore)
 	storageService := servergrpc.NewStorageService(storageStorage)
-	users := server.NewUsers(repository, documentDatabase)
+	users := server.NewUsers(projectsRepository, documentDB)
 	usersService := servergrpc.NewUsersService(users)
 	apiKeys := server.NewAPIKeys(apiKeyRepository)
 	apiKeysService := servergrpc.NewAPIKeysService(apiKeys)
-	teams := server.NewTeams(repository, documentDatabase)
+	teams := server.NewTeams(projectsRepository, documentDB)
 	teamsService := servergrpc.NewTeamsService(teams)
-	databases := server.NewDatabases(repository, documentDatabase)
+	databases := server.NewDatabases(projectsRepository, documentDB)
 	databasesService := servergrpc.NewDatabasesService(databases)
 	consoleAuth := console.NewAuth(appConfig, consoleAdminRepository)
 	authService := consolegrpc.NewAuthService(consoleAuth)
-	grpcServer, err := server2.NewGRPCServer(app, appConfig, validator, accountService, healthService, projectsService, storageService, usersService, apiKeysService, teamsService, databasesService, authService)
+	grpcServer, err := server2.NewGRPCServer(app, appConfig, validator, repository, accountService, healthService, projectsService, storageService, usersService, apiKeysService, teamsService, databasesService, authService)
 	if err != nil {
 		cleanup()
 		return nil, nil, err
